argocd/sys_utils_project/monitoring/vmsingle/vmsingle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle-ingress
  namespace: monitoring
spec:
  rules:
  - host: "mon.home.local"
    http:
      paths:
      - pathType: Prefix
        path: /vmsingle
        backend:
          service:
            name: vmsingle-vmsingle
            port:
              number: 8429
